# pinn-pde

./: .gitignore  README.md  pyproject.toml
examples/: __init__.py  burgers_1d.py  canonical_cases.py  schrodinger_1d.py
src/pinn_pde/: __init__.py  losses.py  models.py  problems.py  training.py
tests/: conftest.py  test_canonical_cases.py  test_core.py  test_examples.py
