[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinn-pde"
version = "0.1.0"
description = "A compact PINN toolkit for PDE experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.20",
    "matplotlib>=3.3",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
notebooks = ["jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]
